feat: add streaming system runtime foundations